# KML-HBV-HAOBO-2

./: .editorconfig  .gitignore  README.md  conda.yml  environment.yml  pyproject.toml  requirements.txt  singularity.def
assets/: AB033550.fasta  KR230749.fasta  U95551.fasta  X51970.fasta  X75658.fasta  known_sites.csv  pcDNA3.1-GTA-Aus.fasta  primer.fasta  target.bed
assets/D00330/: D00330.fa  D00330.fa.amb  D00330.fa.ann  D00330.fa.fai  D00330.fasta.ann  D00330.fasta.bwt  D00330.fasta.fai  D00330.fasta.pac  D00330.fasta.sa  target-1800.bed
deprecated/: Singularty-Install.md  databaseA.py  databaseB.py  databaseC.py  databaseD.py  databaseE.py  databaseF.py  databaseG.py  databaseH.py  fastp-20251013.smk  make_target_bed.py  tantan_lcr_extractor.py  target-500.bed  target_A.bed  target_B.bed  target_C.bed  target_D.bed  target_E.bed  target_F.bed  target_G.bed  target_H.bed  var_test.py  vcf2tab.py  vcf_low_lcr.py
docs/: HaoboCloudDeployment.md  Mamba-Install.md  Singularty-Install.md  浩博云上部署.md
src/config/: database.py  env.py  software.py
src/kml_hbv_haobo_2/: __main__.py  args.py  cli.py  config.py  fastq.py  snakemake.py
src/util/: all_vars_summary.py  memory_stats.py  tantan_lcr_extractor.py
src/workflow/: Snakefile
src/workflow/env/: basic.yaml  basic2.yaml  python3.12.yaml  snakemake.yaml
src/workflow/rules/: bed.smk  fastp.smk  fastqc.smk  lowcov.smk  map.smk  prepare.smk  qc_summary.smk  ref.smk  summary.smk  var.smk  (+1 more)
tests/: hbv_snp_to_aa.py  input-1800bp.tsv  input-500bp.1sample.tsv  input-500bp.tsv  input.tsv  snakemake.yaml  test_all.py
(+13 files in other folders)
